--- a/styles.css
+++ b/styles.css
@@ -126,20 +126,37 @@ ul {
 
 .content-item a img {
   display: block;
-} 
+}
 
-.footer-text{
+.content-footer p {
   margin: 0;
 }
 
-.content-item:hover{
+/* .content-item:hover {
   border: 1px solid var(--primary-color);
+} */
+
+.content-item:hover .content-footer {
+  background-color: var(--primary-color);
 }
 
-.content-footer{
-  background-color: #1B1B1B;
-  color: #FFFFFF;
+.content-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #1b1b1b;
+  color: #ffffff;
   height: 30px;
   padding: 6px 20px;
   font-size: 14px;
+}
+
+.footer-text-hover {
+  
+}
+
+.content-sidebar {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
 }
