--- a/css/styles.css
+++ b/css/styles.css
@@ -62,10 +62,12 @@ ul {
     padding: 14px 25px 14px 17px;
 }
 .search input:focus {
-    border:1px solid var(--primary-color);
+    background-color: #fff;
+    border: 2px solid var(--primary-color);
     border-radius: 6px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    box-shadow: 0 1px 10px 0 rgb(0 0 0 / 10%), 0 3px 10px 0 rgb(0 0 0 / 10%);
 }
 
 .search-options{
@@ -75,7 +77,7 @@ ul {
     left: 0;
     width: 100%;
     height: 165px;
-    border:1px solid var(--primary-color);
+    border:2px solid var(--primary-color);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.07);
@@ -83,7 +85,7 @@ ul {
 }
 .search-options p {
     margin: 0;
-    font-size: 12px;
+    font-size: 14px;
     margin-bottom: 5px;
     cursor: pointer;
 }
@@ -96,6 +98,7 @@ ul {
 }
 .search-options p span:first-child {
     color: var(--primary-color);
+    font-weight: 600;
 }
 .search-options p span:last-child {
     cursor: pointer;
@@ -113,7 +116,7 @@ ul {
     background: none;
     border: none;
     outline: none;
-    font-size: 12px;
+    font-size: 13px;
 }
 .search button {
     background: none;
