--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,7 @@ ul {
     top: 42px;
     left: 0;
     width: 100%;
-    height: 165px;
+    /* height: 165px; */
     border:2px solid var(--primary-color);
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
