--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ ul {
 }
 /**main categories(kadın-erkek-cocuk)*/
 .categories {
-  margin: 0 auto;
+  margin: 10px 0px auto;
   display: flex;
   width: 1080px;
   position: relative;
@@ -201,18 +201,88 @@ ul {
   height: 120px;
   margin-top: 15px;
 }
-.ev-yasam-list:hover > .ev-yasam-list-wrapper {
-  display: grid;
-  position: absolute;
-  right: 0;
-  left: 0;
-  width: 100%;
-}
+
 .kadin-list:hover > .kadin-list-wrapper {
   display: grid;
   position: absolute;
   right: 0;
   left: 0;
   width: 100%;
+}
+.erkek-list:hover > .erkek-list-wrapper{
+  display: grid;
+  position: absolute;
+  right: 0;
+  left: 0;
+  width: 100%;
+}
+.cocuk-list:hover > .cocuk-list-wrapper{
+    display: grid;
+    position: absolute;
+    right: 0;
+    left: 0;
+    width: 100%;
+}
+.ev-yasam-list:hover > .ev-yasam-list-wrapper {
+    display: grid;
+    position: absolute;
+    right: 0;
+    left: 0;
+    width: 100%;
+  }
+.electronic-list:hover > .electronic-list-wrapper{
+    display: grid;
+    position: absolute;
+    right: 0;
+    left: 0;
+    width: 100%;
+}
+.supermarket-list:hover > .supermarket-list-wrapper{
+    display: grid;
+    position: absolute;
+    right: 0;
+    left: 0;
+    width: 100%;
+}
+.wrapper2-mega-menu {
+  display: grid;
+  background-color: #fff;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
+  padding: 5px 20px;
+  grid-template-columns: 1fr 1fr 1fr 2fr 2fr;
+  width: 1080px;
+  height: 330px;
+  display: none;
+}
+.campaign-items-list{
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(2, auto);
+  grid-gap:20px;
+  margin-top: 10px;
+}
+.cosmetic-list:hover > .cosmetic-list-wrapper{
+  display: grid;
+  position: absolute;
+  right: 0;
+  left: 0;
+  width: 100%;
+}
+.shoeAndbag-list:hover >.shoeAndbag-list-wrapper{
+  display: grid;
+  position: absolute;
+  right: 0;
+  left: 0;
+  width: 100%;
+}
+.clockAndaccessory-list:hover > .clockAndaccessory-list-wrapper{
+  display: grid;
+  position: absolute;
+  right: 0;
+  left: 0;
+  width: 100%;
+}
+.parfume{
+  padding: 4px;
 }
 /*? End of mega menu Dropdown */
